Remove config.json so it doesn't accidentally get pushed (lets hope  .gitignore does it shit)

--- a/example_config.json
+++ b/example_config.json
@@ -1,4 +1,5 @@
 {
+    "COMMENT": "Copy this file as 'config.json' and substitute the values for what you want.",
     "XEILI_REDIS_HOST": "localhost",
     "XEILI_REDIS_PASSWORD": "",
     "XEILI_REDIS_PORT": 6379,
