--- a/example_config.json
+++ b/example_config.json
@@ -1,9 +1,9 @@
 {
     "COMMENT": "Copy this file as 'config.json' and substitute the values for what you want.",
-    "XEILI_REDIS_HOST": "localhost",
-    "XEILI_REDIS_PASSWORD": "",
-    "XEILI_REDIS_PORT": 6379,
-    "XEILI_REDIS_DB": 0,
-    "XEILI_TOKEN": "TOKEN",
-    "XEILI_PREFIX": "test "
+    "AMETHYST_REDIS_HOST": "localhost",
+    "AMETHYST_REDIS_PASSWORD": "",
+    "AMETHYST_REDIS_PORT": 6379,
+    "AMETHYST_REDIS_DB": 0,
+    "AMETHYST_TOKEN": "TOKEN",
+    "AMETHYST_PREFIX": "test "
 }
