--- a/circle.yml
+++ b/circle.yml
@@ -5,7 +5,7 @@ jobs:
   build:
     docker:
       - image: circleci/python:3.6.1
-    working_directory: .
+    working_directory: Amethyst
     steps:
       - checkout
       - run:
