--- a/circle.yml
+++ b/circle.yml
@@ -16,6 +16,6 @@ jobs:
       - run:
           command: |
            cloc --exclude-dir=discord --exclude-dir=discord.py .           
-           python -m pip install flake8
+           python3 -m pip install flake8
            flake8 --exclude=discord,discord.py --show-source --max-line-length 120 . 
-           python -m compileall -x discord.* .
+           python3 -m compileall -x discord.* .
