no need to enforce py3.6 binary exclusively
python3 symlink is now pointing to py3.6

--- a/circle.yml
+++ b/circle.yml
@@ -17,4 +17,4 @@ jobs:
           command: |
            python3 --version
            cloc --exclude-dir=discord --exclude-dir=discord.py .           
-           /usr/bin/python3.6 -m compileall -x discord.* .
+           python3 -m compileall -x discord.* .
