--- a/circle.yml
+++ b/circle.yml
@@ -18,3 +18,6 @@ jobs:
            python3 --version
            cloc --exclude-dir=discord --exclude-dir=discord.py .           
            python3 -m compileall -x discord.* .
+      - run:
+          command: |
+          pytest
